# spindle-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
example/: Cargo.toml
example/src/: main.rs
scratch/: Cargo.toml
scratch/src/: main.rs
spindle/: Cargo.toml
spindle/src/: lib.rs  spindle.rs
src/: lib.rs  main.rs
