[package]
name = "example"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
spindle_rs = { path = "../spindle" }
tokio = { workspace = true }
google-cloud-spanner = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
ctrlc = { workspace = true }
anyhow = { workspace = true }
rustls = { workspace = true }
