[package]
name = "spindle_rs"
version = "0.2.12"
edition = "2024"
authors = ["flowerinthenight <root@flowerinthenight.com>"]
description = "A distributed locking crate built on Cloud Spanner and TrueTime."
license = "Apache-2.0"
repository = "https://github.com/flowerinthenight/spindle-rs"
keywords = ["leader-election", "distributed-locking", "distributed-lock", "spanner"]

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
google-cloud-spanner = { package="gcloud-spanner", version="1.2.0" }
exp_backoff = "0.1.5"
log = "0.4.27"
time = "0.3.41"
scopeguard = "1.2.0"
uuid = { version = "1.16.0", features = ["v4"] }
anyhow = "1.0.97"
