[package]
name = "spindle_rs"
description = "A distributed locking crate built on Cloud Spanner and TrueTime."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[dependencies]
tokio = { workspace = true }
google-cloud-spanner = { workspace = true }
exp_backoff = { workspace = true }
log = { workspace = true }
time = { workspace = true }
scopeguard = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
